# umts-tools

./: ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  Makefile.j-pkg  Makefile.pkg  README  acinclude.m4  configure  configure.ac  install-win32.bat
debian/: changelog  control  copyright  rules
doc/: Makefile.am  Makefile.in
doc/examples/: Makefile.am  Makefile.in  config  drm-jpg-fl.dm  drm-jpg-sd-10count.dcf  drm-jpg-sd-10count.wbxml  drm-jpg-sd-10count.xml  wap-prov10-delete.wbxml  wap-prov10-delete.xml  wap-prov10.wbxml  wap-prov10.xml  wap-si-long.wbxml  wap-si-long.xml  wap-si.wbxml  wap-si.xml  wap-sl.wbxml  wap-sl.xml
doc/html/: Makefile.am  Makefile.in  index.html  umts-answer.html  umts-dialer.html  umts-drm.html  umts-gui.html  umts-multipart.html  umts-p2klog.html  umts-phonebook.html  umts-sms.html  umts-wappush.html
doc/man/: Makefile.am  Makefile.in  umts-answer.pl.1  umts-dialer.pl.1  umts-drm.pl.1  umts-gui.pl.1  umts-multipart.pl.1  umts-p2klog.pl.1  umts-pdp.pl.1  umts-phonebook.pl.1  umts-sms.pl.1  umts-wappush.pl.1
src/: Makefile.am  Makefile.in  test-term.pl  test-units.pl  umts-answer.pl  umts-dialer.pl  umts-drm.pl  umts-gui.pl  umts-multipart.pl  umts-p2klog.pl  umts-pdp.pl  umts-phonebook.pl  umts-sms.pl  umts-wappush.pl
src/DRM/: FL.pm  Makefile.am  Makefile.in  RightObject.pm  SD.pm
src/MMS/: Headers.pm  Headers.t  Makefile.am  Makefile.in
src/NetPacket/: Makefile.am  Makefile.in
src/SMS/: Makefile.am  Makefile.in  PDU.pm  SM_RP.pm
src/SMS/PDU/: Deliver.pm  Deliver.t  Makefile.am  Makefile.in  Submit.pm  Submit.t  UserData.pm  UserData.t
src/UMTS/: App.pm  Core.pm  Core.pm.in  Dialer.pm  Dummy.pm  Dummy.t  L3.pm  Log.pm  Log.t  Makefile.am  Makefile.in  PDP.pm  Phonebook.pm  SMS.pm  Terminal.pm  Test.pm  WBXML.pm
src/UMTS/DataLog/: Makefile.am  Makefile.in  P2k.pm  Packet.pm
src/UMTS/Dummy/: Makefile.am  Makefile.in  V1050.pm  V800.pm  V902SH.pm  Z107.pm
src/UMTS/GUI/: About.pm  Dialer.pm  Main.pm  Makefile.am  Makefile.in  Phonebook.pm  Phonebook_Sel.pm  Phonebook_View.pm  SMSCompose.pm  SMSExplore.pm  SMSExplore_Sel.pm  SMSExplore_View.pm  TermInfo.pm
src/UMTS/L3/: CC.pm  GMM.pm  GSM.pm  GSM.t  MM.pm  Makefile.am  Makefile.in  RR.pm  SMC.pm  SS.pm
src/UMTS/NetPacket/: Ethernet.pm  Ethernet.t  Makefile.am  Makefile.in  Pcap.pm  Pcap.t  Pframe.pm  Pframe.t  SMPP.pm  SMPP.t
src/UMTS/PDP/: Makefile.am  Makefile.in  POSIX.pm  Win32.pm
src/UMTS/Phonebook/: Entry.pm  Entry.t  Makefile.am  Makefile.in
src/UMTS/SMS/: Entry.pm  Entry.t  Makefile.am  Makefile.in
src/UMTS/Terminal/: Call.pm  CallList.pm  CallList.t  CallStatus.pm  CallStatus.t  Common.pm  Info.pm  Info.t  Keys.pm  Makefile.am  Makefile.in  SMS.pm
src/UMTS/Test/: AT.pm  AT.t  Makefile.am  Makefile.in  NetPacket.pm
src/WSP/: Headers.pm  Headers.t  Makefile.am  Makefile.in  PDU.pm  PDU.t
src/WSP/Headers/: Field.pm  Makefile.am  Makefile.in
src/WSP/PDU/: ConfirmedPush.pm  ConfirmedPush.t  Disconnect.pm  Disconnect.t  Makefile.am  Makefile.in  Push.pm  Push.t  Suspend.pm  Suspend.t
